2003-04-30  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add order.

	* gas/ia64/order.s: New file.
	* gas/ia64/order.d: Likewise.

2003-04-29  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add align.

	* gas/ia64/align.d: New file.
	* gas/ia64/align.s: Likewise.

	* ia64/dependency-1.d: Remove the padding.

2003-04-30  H.J. Lu <hjl@gnu.org>

	* gas/ia64/ia64.exp: Add real.

	* gas/ia64/real.s: New file.
	* gas/ia64/real.d: Likewise.

2003-04-29  Nick Clifton  <nickc@redhat.com>

	* gas/elf/elf.exp: Invoke symver test.
        * gas/elf/symver.s: New test case.
        * gas/elf/symver.d: Expected output.

2003-04-24  Nick Clifton  <nickc@redhat.com>

	* gas/ppc/astest2.s: Add tests for conditional branches with
	probability indicators.
	* gas/ppc/astest2.d: Add expected disassembly.

2003-04-23  H.J. Lu <hjl@gnu.org>

	* gas/ia64/opc-i.s: Add testcases for valid label.
	* gas/ia64/opc-i.d: Updated.

2003-04-10  Alexandre Oliva  <aoliva@redhat.com>

	* gas/mips/elf-rel-got-n32.d, gas/mips/elf-rel-got-n32.s,
	gas/mips/elf-rel-got-n64.d, gas/mips/elf-rel-got-n64.s,
	gas/mips/elf-rel-xgot-n32.d, gas/mips/elf-rel-xgot-n64.d: New.
	* gas/mips/mips.exp: Test them.

2003-04-08  Nick Clifton  <nickc@redhat.com>

	* gas/m32r/m32r.exp: Run signed-relocs test.
        * gas/m32r/signed-relocs.s: New file: Test signed relocs.
        * gas/m32r/signed-relocs.d: New file: Expected results

	* gas/ia64/dependency-1.s: New file: Test read before write dependency.
	* gas/ia64/dependency-1.d: New file: Expected assembly results.
	* gas/ia64/ia64.exp: Run the new test.

2003-04-05  Stephane Carrez  <stcarrez@nerim.fr>

	* gas/m68hc11/bug-1825.d (_table): Update.
	* gas/m68hc11/bug-1825.s (_table): Add tests for 16-bit absolute relocs

2003-04-05  Stephane Carrez  <stcarrez@nerim.fr>

	* gas/m68hc11/insns.s: Add %page and %addr checks.
	* gas/m68hc11/insns12.s: Likewise.
	* gas/m68hc11/insns-dwarf2.d: Update.
	* gas/m68hc11/insns.d: Update.
