@@ -1,0 +1,3 @@
+	.data
+foo::
+	data1 0
